--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -53,6 +53,25 @@
     color: #8d8a8a;
 }
 
+.ws-fees {
+    font-size: 17px;
+}
+
+#fees1 {
+    font-size: 17px;
+    color: #212121;
+}
+
+#fees2 {
+    font-weight: 500;
+    color: green;
+}
+
+#fees3 {
+    font-weight: 400;
+    color: #212121;
+}
+
 .card-container {
     padding-bottom: 7px;
 }
