--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,6 +29,9 @@
                     <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="about-section">About us</a>
                 </li>
                 <li>
+                    <a pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="courses-section">Courses</a>
+                </li>
+                <li>
                     <a pageScroll [pageScrollDuration]="200" [routerLink]="['/test-series']" fragment="navbar-section">Online Test</a>
                 </li>
                 <li>
