--- a/src/app/policy/refund-policy/refund-policy.component.html
+++ b/src/app/policy/refund-policy/refund-policy.component.html
@@ -2,8 +2,9 @@
     <h1 class="title1">Refund Policy</h1>
     <p class="content">We, Neet Korner, have a Refund Policy of the charges that we got for offering our services as follows:- </p>
     <ul>
-        <li>If request is on same day, then money will be 100% refunded.</li>
+        <li>If request is within 24 hours, then money will be 100% refunded.</li>
         <li>If request is within 72 hours, then money will be 50% refunded.</li>
         <li>If request is after 72 hours, then no money will be refunded.</li>
     </ul>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
