--- a/src/app/courses/courses-page/courses-page.component.scss
+++ b/src/app/courses/courses-page/courses-page.component.scss
@@ -1,183 +1,331 @@
-// .ws-section {
-//     font-family: "Raleway", sans-serif;
-//     background-color: #fafafa;
-// }
-// .login-wrapper {
-//     width: 79%;
-//     margin: auto;
-//     margin-top: 35px;
-// }
-// .left-part {
-//     background-color: #fafafa;
-// }
-// .workshop-image {
-//     width: 100%;
-//     border-radius: 15px;
-//     display: block;
-// }
-// .normal-heading {
-//     margin-top: -20px;
-//     margin-bottom: 0px;
-//     font-family: "Raleway", sans-serif;
-//     font-size: 30px;
-//     line-height: 30px;
-// }
-// .content-text {
-//     margin-top: 30px;
-//     font-size: 16px;
-//     line-height: 20px;
-//     color: #242c42;
-//     font-family: "Raleway", sans-serif;
-// }
-// .right-part {
-//     border-radius: 10px;
-// }
-// .benefit-box {
-//     background-color: #2597d5;
-//     color: #fcf6f5ff;
-//     margin-bottom: 10px;
-//     padding: 20px 16px 10px 0px;
-//     border-radius: 6px;
-//     a {
-//         text-decoration: none;
-//     }
-//     .right-title {
-//         color: #fcf6f5ff;
-//     }
-// }
-// .right-title {
-//     color: #212121;
-//     font-size: 20px;
-//     font-weight: 400;
-//     line-height: 24px;
-// }
-// .slot-booking {
-//     margin-bottom: 10px;
-//     padding: 20px 0px 10px 0px;
-//     border-radius: 6px;
-//     a {
-//         text-decoration: none;
-//     }
-// }
-// .small-box {
-//     margin: 15px 10px 10px 10px;
-//     background-color: white;
-//     font-family: "Raleway", sans-serif;
-//     .date {
-//         color: #212121;
-//     }
-//     .time {
-//         color: #7a7a7a;
-//     }
-//     .cost {
-//         color: #2597d5;
-//     }
-// }
-// .proceed-to-pay {
-//     margin-top: 20px;
-//     background-color: #2597d5;
-//     color: #fcf6f5ff;
-//     font-family: "Raleway", sans-serif;
-//     font-weight: 500;
-//     font-size: 16px;
-// }
-// .mentor-container {
-//     margin-top: 40px;
-//     background-color: #f2f2f2;
-// }
-// .mentor-inside {
-//     margin: auto;
-//     width: 77%;
-//     padding: 10px 0px 20px 0px;
-// }
-// .mentor-title {
-//     margin: 20px 0px 20px 0px;
-//     font-size: 25px;
-//     font-weight: 700;
-// }
-// .mentor-pic {
-//     width: 90%;
-//     height: 100%;
-//     border-radius: 8px;
-// }
-// .mentor-name {
-//     margin: 0px 0px 10px 0px;
-//     font-size: 20px;
-//     font-weight: 600;
-// }
-// .mentor-text {
-//     font-size: 16px;
-//     line-height: 20px;
-//     color: #242c42;
-// }
-// @media only screen and (max-width: 1000px) {
-//     .login-wrapper {
-//         width: 85%;
-//     }
-//     .mentor-inside {
-//         width: 83%;
-//     }
-// }
-// @media only screen and (max-width: 870px) {
-//     .login-wrapper {
-//         width: 90%;
-//     }
-//     .mentor-inside {
-//         width: 88%;
-//     }
-// }
-// @media only screen and (max-width: 750px) {
-//     .login-wrapper {
-//         width: 95%;
-//     }
-//     .mentor-inside {
-//         width: 93%;
-//     }
-//     .content-text {
-//         margin-top: 20px;
-//     }
-// }
-// @media only screen and (max-width: 599px) {
-//     .mentor-name {
-//         margin-top: 20px;
-//     }
-//     .mentor-pic {
-//         width: 100%;
-//     }
-//     .left-content {
-//         padding-bottom: 20px;
-//     }
-// }
-// @media only screen and (max-width: 450px) {
-//     .login-wrapper {
-//         width: 100%;
-//         margin-top: 0px;
-//     }
-//     .mentor-inside {
-//         width: 100%;
-//     }
-//     .mentor-pic {
-//         border-radius: 0px;
-//     }
-//     .mentor-title {
-//         padding-left: 15px;
-//         padding-right: 15px;
-//     }
-//     .mentor-content {
-//         padding-left: 15px;
-//         padding-right: 15px;
-//     }
-//     .left-content {
-//         padding: 10px 15px 20px 15px;
-//     }
-//     .workshop-image {
-//         border-radius: 0px;
-//     }
-//     .benefit-box {
-//         border-radius: 0px;
-//     }
-//     .slot-booking {
-//         margin-left: 15px;
-//         margin-right: 15px;
-//     }
-// }
+.ws-section {
+    font-family: "Noto Sans JP", sans-serif;
+    background-color: #fafafa;
+}
+
+.login-wrapper {
+    width: 90%;
+    margin: auto;
+    margin-top: 35px;
+}
+
+.left-part {
+    background-color: #fafafa;
+}
+
+.right-image {
+    // position: fixed;
+}
+
+.workshop-image {
+    width: 100%;
+    border-radius: 6px;
+    display: block;
+}
+
+.normal-heading {
+    // margin-top: -52px;
+    padding-top: 0px;
+    text-align: left;
+    margin-bottom: 0px;
+    // border: 1px solid black;
+    font-size: 30px;
+    line-height: 35px;
+    font-family: "Noto Sans JP", sans-serif;
+}
+
+.desc {
+    color: grey;
+    margin-top: 14px;
+    font-size: 17px;
+    line-height: 26px;
+}
+
+.content-text {
+    margin-top: 30px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #242c42;
+    font-family: "Noto Sans JP", sans-serif;
+}
+
+.right-part {
+    border-radius: 10px;
+    text-align: left;
+}
+
+.benefit-box {
+    background-color: #2597d5;
+    color: #fcf6f5ff;
+    margin-bottom: 10px;
+    padding: 20px 16px 10px 0px;
+    border-radius: 6px;
+    a {
+        text-decoration: none;
+    }
+    .right-title {
+        color: #fcf6f5ff;
+    }
+}
+
+.right-title {
+    color: #212121;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.slot-booking {
+    margin-bottom: 10px;
+    padding: 20px 0px 10px 0px;
+    border-radius: 6px;
+    a {
+        text-decoration: none;
+    }
+}
+
+.small-box {
+    margin: 15px 10px 10px 10px;
+    background-color: white;
+    font-family: "Noto Sans JP", sans-serif;
+    .date {
+        color: #212121;
+    }
+    .time {
+        color: #7a7a7a;
+    }
+    .cost {
+        color: #2597d5;
+    }
+}
+
+.proceed-to-pay {
+    margin-top: 20px;
+    background-color: #2597d5;
+    color: #fcf6f5ff;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.mentor-container {
+    margin-top: 40px;
+    background-color: #f2f2f2;
+}
+
+.mentor-inside {
+    margin: auto;
+    width: 77%;
+    padding: 10px 0px 20px 0px;
+}
+
+.mentor-title {
+    margin: 20px 0px 20px 0px;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.mentor-pic {
+    width: 90%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.mentor-name {
+    margin: 0px 0px 10px 0px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.mentor-text {
+    font-size: 16px;
+    line-height: 20px;
+    color: #242c42;
+}
+
+//***************************************
+.details-columns {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    // height: 100%;
+    // border: 1px solid black;
+}
+
+.details-container {
+    margin-top: 20px;
+    // height: 100%;
+    // display: flex;
+    // flex-direction: column;
+}
+
+.column1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 192px;
+}
+
+.column2 {
+    margin-top: 25px;
+}
+
+.ws-style {
+    // float: left;
+    // width: 40%;
+    // border-right: 1px solid grey;
+}
+
+.ws-ageGroup {
+    // float: left;
+    // width: 40%;
+    // margin-left: 3%;
+}
+
+#head {
+    font-size: 16px;
+    color: #7a7a7a;
+    line-height: 30px;
+}
+
+#desc {
+    font-size: 17px;
+    line-height: 25px;
+    // font-weight: 500;
+    color: #476176;
+}
+
+.status {
+    font-size: 16px;
+    color: grey;
+}
+
+.ws-fees {
+    // font-size: 18px;
+    // line-height: 2.3vw;
+    margin-top: 20px;
+}
+
+#fees1 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 8px;
+    color: #176476;
+}
+
+#fees2 {
+    // font-weight: 500;
+    font-size: 19px;
+    color: green;
+}
+
+#fees3 {
+    // font-weight: 400;
+    font-size: 20px;
+    color: grey;
+}
+
+.join-now-btn {
+    margin-top: 20px;
+}
+
+//*********************************
+.bottom-container {
+    width: 80%;
+    margin: auto;
+    margin-top: 35px;
+    color: #476176;
+}
+
+ul {
+    font-size: 20px;
+    line-height: 40px;
+    font-weight: 700;
+    li {
+        font-size: 16px;
+        line-height: 30px;
+        font-weight: 500;
+    }
+}
+
+.last-lines {
+    font-size: 16px;
+    line-height: 26px;
+}
+
+//*********************************
+@media only screen and (max-width: 1000px) {
+    .login-wrapper {
+        width: 85%;
+    }
+    .mentor-inside {
+        width: 83%;
+    }
+}
+
+@media only screen and (max-width: 870px) {
+    .login-wrapper {
+        width: 90%;
+    }
+    .mentor-inside {
+        width: 88%;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .login-wrapper {
+        width: 95%;
+    }
+    .mentor-inside {
+        width: 93%;
+    }
+    .content-text {
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 599px) {
+    .mentor-name {
+        margin-top: 20px;
+    }
+    .mentor-pic {
+        width: 100%;
+    }
+    .left-content {
+        padding-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .login-wrapper {
+        width: 100%;
+        margin-top: 0px;
+    }
+    .mentor-inside {
+        width: 100%;
+    }
+    .mentor-pic {
+        border-radius: 0px;
+    }
+    .mentor-title {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .mentor-content {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .left-content {
+        padding: 10px 15px 20px 15px;
+    }
+    .workshop-image {
+        border-radius: 0px;
+    }
+    .benefit-box {
+        border-radius: 0px;
+    }
+    .slot-booking {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
