--- a/src/app/courses/courses-page/courses-page.component.html
+++ b/src/app/courses/courses-page/courses-page.component.html
@@ -17,10 +17,10 @@
                             <div id="head">Subject</div>
                             <div id="desc">Chemistry</div>
                         </div>
-                        <!-- <div class="ws-ageGroup">
-                            <div id="head">Eligibility</div>
-                            <div id="desc">For Neet Droppers</div>
-                        </div> -->
+                        <div class="ws-ageGroup">
+                            <div id="head">Language</div>
+                            <div id="desc">Hindi and English</div>
+                        </div>
                     </div>
                     <div class="column2">
                         <div class="ws-style">
@@ -68,15 +68,6 @@
                     <div *ngFor="let s of inorganic;">
                         <li>{{s}}</li>
                     </div>
-                    <!-- <li>Periodicity and Classification of Elements</li>
-                    <li>Chemical Bonding and its Molecular Structure</li>
-                    <li>Hydrogen</li>
-                    <li>The s-Block Elements</li>
-                    <li>The p-Block Elements - Boron & Carbon Family</li>
-                    <li>The p-Block Elements</li>
-                    <li>The d-and f-block Elements</li>
-                    <li>Coordination Compounds</li>
-                    <li>General Principles and Processes of Isolation of Elements</li> -->
                 </ul>
 
                 <ul>Organic Chemistry For {{courseDetails.class}}
@@ -93,8 +84,13 @@
 
             </mat-tab>
             <mat-tab label="FAQ">
+                <ul> Why to join this course?
+                    <li>If you are facing problems in understanding chemistry.</li>
+                    <li>If you feel difficulty in NEET exam because of chemistry.</li>
+                    <li>If you don't know from where and how to prepare for NEET exam.</li>
+                    <li>If you are facing problems in understanding chemistry because of English language.</li>
+                </ul>
                 <ul> Why Dr. Vishesh Parashri (Dr. Slok Sir)?
-
                     <li>150,000+ happy Students, 1000+ selected students across the India.</li>
                     <li>One of the Best Chemistry Teachers in India.</li>
                     <li>Reads & Researches a lot before Making Any Suggestions.</li>
@@ -104,7 +100,6 @@
                     <li>He is famous among students for his teaching style and Awesome tricks.</li>
                 </ul>
                 <ul>Why NEET KORNER Classes?
-
                     <li>NEET KORNER Team is honestly working to provide the best platform to future doctors.</li>
                     <li>NEET KORNER Team is always dedicated to helping needy students.</li>
                     <li>Counselling Calls on a regular interval.</li>
@@ -115,30 +110,9 @@
                 </ul>
             </mat-tab>
         </mat-tab-group>
-
         <div class="last-lines">You can access live lectures and recorded videos any time, any where, any device - Mobile(iPhone or android) <br> This course is based on the AUTHENTIC method to master Chemistry for NEET. <br> Dr. Vishesh Parashri (Dr. Slok Sir) explains Chemistry
             in the EASIEST way to help students GRASP concepts, memorize essential details Complete NCERT Based Syllabus Covering {{courseDetails.class}} Learn at your own time, revise as many time as you need. <br><br> All The Best <br> Let's Score 175+
             in NEET Chemistry with Dr Vishesh Parashri </div>
-
     </div>
-
-
-    <!-- <div class="mentor-container">
-        <div class="mentor-inside">
-            <div class="mentor-title">Workshop Mentor</div>
-            <div class="mentor-box" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="start start">
-                <div class="mentor-image" fxFlex="45">
-                    <img class="mentor-pic" src="assets/images/mentors_images/harshwardhan.png" alt="mentor image">
-                </div>
-                <div class="mentor-content" fxFlex="55">
-                    <div class="mentor-name">Harshwardhan, GANG13</div>
-                    <div class="mentor-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur quo dolore odit quam voluptatem nemo delectus eos ullam vero iste magni ipsa harum, reiciendis impedit quidem cum maiores sit suscipit dignissimos culpa numquam?
-                        Maiores corrupti natus excepturi dolorum quasi beatae minima sunt deserunt ducimus fugit? Sint porro perferendis exercitationem rerum! <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit maiores, repellendus asperiores
-                        quis corrupti magnam! Facilis magnam sapiente et reiciendis enim accusamus, harum totam quidem repellat cum in tempore aspernatur optio dolorem unde perferendis itaque reprehenderit! Nostrum, quo qui iure architecto pariatur distinctio
-                        error impedit vel beatae, neque quos laborum dignissimos harum soluta omnis alias fugit dicta sit incidunt ipsa maxime, explicabo dolorum aperiam labore. Quibusdam fuga perferendis fugiat exercitationem. </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <br><br>
 </div>
