--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,6 +4,7 @@
     <mat-card class="example-card">
         <br>
         <mat-card-content>
+            <img class="img" width="80px" alt="Neet korner" src="assets/images/logo2.jpeg">
             <form method="post" action="https://www.mylearninggraph.com/vendor/b2b-login.php" method="post" enctype="multipart/form-data">
                 <div class="row">
                     <input type="hidden" name="action" id="action" value="login">
@@ -18,7 +19,7 @@
         </mat-card-content>
         <br>
 
-        <button mat-raised-button class="login-button" type="submit">Login</button>
+        <button mat-raised-button class="login-button" type="submit" style="font-family: 'Noto Sans JP', sans-serif;">Login</button>
 
     </mat-card>
 
