--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -24,8 +24,7 @@
         </div>
         <div class="right">
             <div class="image-div">
-                <img class="img" src="https://scontent.fdel8-1.fna.fbcdn.net/v/t1.0-9/72787918_483498248904938_3948531123620937728_o.jpg?_nc_cat=103&ccb=2&_nc_sid=a26aad&_nc_ohc=ILa1ESZE5uYAX8T7a1S&_nc_ht=scontent.fdel8-1.fna&oh=d213663ca78877b47605462504f707ef&oe=5FDF9FDF"
-                    alt="pic">
+                <img class="img" src="assets/images/community_pic.jpg" alt="pic">
             </div>
         </div>
     </div>
