--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -3,6 +3,10 @@
     height: 100%;
 }
 
+form {
+    font-family: "Noto Sans JP", sans-serif;
+}
+
 .example-card {
     width: 20%;
     margin: auto;
@@ -13,17 +17,13 @@
 }
 
 .login-label {
-    color: #212121;
+    color: #476176;
     font-size: 16px;
 }
 
 .login-input {
-    // border-radius: 3px;
     font-size: 18px;
     width: 100%;
-    // height: 25px;
-    // background-color: #f7f7f7;
-    // border: 1px solid black;
 }
 
 .wrong-message {
@@ -32,7 +32,15 @@
 
 .login-button {
     width: 100%;
-    // color: rgb(0, 20, 87);
+    background-color: #1756bd;
+    color: #fff;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 @media only screen and (max-width: 450px) {
