--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -3,8 +3,8 @@
         <h1 class="title">NEET COURSES</h1>
         <div class="all-courses">
             <div class="single-course" *ngFor="let course of courses; let i = index">
-                <!-- <a [routerLink]="['courses-page',courses?.id]"> -->
-                <a (click)="onSelect(course)">
+                <a [routerLink]="['/courses-page',course.id]" pageScroll [pageScrollDuration]="0" fragment="navbar-section">
+                    <!-- <a (click)="onSelect(course)"> -->
                     <mat-card class="card-container">
                         <div class="card-img">
                             <img mat-card-image src="{{course.img}}" alt="{{course.title}} picture">
