--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -4,15 +4,17 @@
     padding-top: 30px;
     padding-bottom: 10px;
     background-color: #f5f5f5;
+    padding-bottom: 30px;
 }
 
 .title {
-    // border: 1px solid black;
     text-align: center;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 600;
     color: #1756bd;
     font-family: "Noto Sans JP", sans-serif;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .all-courses {
