--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="right">
             <div class="about-image">
-                <img class="img" src="assets/images/slok sir.png" alt="">
+                <img class="img" src="assets/images/slok sir1.png" alt="">
             </div>
             <div class="image-name">
                 <div class="name">Dr. Vishesh Parashari</div>
