--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,15 +25,9 @@
             <a (click)="sidenav.toggle()" [routerLink]="['/test-series']" class="navbar_button" mat-button>Online Test</a>
             <a (click)="sidenav.toggle()" href="https://m.youtube.com/channel/UCVgfyO6RnwjGvJ-xPVd2Thw" target="_blank" class="navbar_button" mat-button>Youtube</a>
             <a (click)="sidenav.toggle()" pageScroll [pageScrollDuration]="200" [routerLink]="['/']" fragment="footer-section" class="navbar_button" pageScroll [pageScrollDuration]="400" href="#contact-section" class="navbar_button" mat-button>Contact Us</a>
-            <!-- <a (click)="sidenav.toggle()" mat-button class="navbar-button"><span class="material-icons">menu_open</span></a> -->
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content>
-        <!-- <app-alert></app-alert> -->
+    <!-- <mat-sidenav-content>
         <router-outlet></router-outlet>
-        <!-- <app-footer></app-footer> -->
-    </mat-sidenav-content>
+    </mat-sidenav-content> -->
 </mat-sidenav-container>
-
-
-<!-- <router-outlet></router-outlet> -->
