--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <div class="fab">
     <button onClick="window.open('https://wa.me/919140640477')" mat-fab class="fab-button" aria-label="whatsapp">
     <fa-icon [icon]="faWhatsapp" class="fa-3x"></fa-icon>
   </button>
 </div>
-<!-- <app-login></app-login> -->
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+<router-outlet></router-outlet>
