--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,50 +1,41 @@
-.login-container {
-    background-color: #f5f5f5;
-    height: 100%;
-}
-
-form {
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-.example-card {
-    width: 20%;
-    margin: auto;
-}
-
-.login {
-    padding: auto;
-}
-
-.login-label {
-    color: #476176;
-    font-size: 16px;
-}
-
-.login-input {
-    font-size: 18px;
-    width: 100%;
-}
-
-.wrong-message {
-    color: red;
-}
-
-.login-button {
-    width: 100%;
-    background-color: #1756bd;
-    color: #fff;
-}
-
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-}
-
-@media only screen and (max-width: 450px) {
-    .example-card {
-        width: 80%;
-    }
-}
+// .login-container {
+//     background-color: #f5f5f5;
+//     height: 100%;
+// }
+// form {
+//     font-family: "Noto Sans JP", sans-serif;
+// }
+// .example-card {
+//     width: 20%;
+//     margin: auto;
+// }
+// .login {
+//     padding: auto;
+// }
+// .login-label {
+//     color: #476176;
+//     font-size: 16px;
+// }
+// .login-input {
+//     font-size: 18px;
+//     width: 100%;
+// }
+// .wrong-message {
+//     color: red;
+// }
+// .login-button {
+//     width: 100%;
+//     background-color: #1756bd;
+//     color: #fff;
+// }
+// img {
+//     display: block;
+//     margin-left: auto;
+//     margin-right: auto;
+//     margin-bottom: 20px;
+// }
+// @media only screen and (max-width: 450px) {
+//     .example-card {
+//         width: 80%;
+//     }
+// }
