--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,35 +1,3 @@
-<!-- <div class="login-container">
-    <br>
-    <br>
-    <mat-card class="example-card">
-        <br>
-        <mat-card-content>
-            <img class="img" width="80px" alt="Neet korner" src="assets/images/logo2.jpeg">
-            <form method="post" action="https://www.mylearninggraph.com/vendor/b2b-login.php" method="post" enctype="multipart/form-data">
-                <div class="row">
-                    <input type="hidden" name="action" id="action" value="login">
-                    <input type="hidden" name="referrer" id="referrer" value="login">
-                </div>
-                <label for="username" class="login-label">UserID</label><br>
-                <input matInput type="text" class="form-control" name="email" class="login-input" required><br><br>
-
-                <label for="password" class="login-label">Password</label><br>
-                <input matInput type="password" class="form-control" name="password" class="login-input" required><br>
-            </form>
-        </mat-card-content>
-        <br>
-
-        <button mat-raised-button class="login-button" type="submit" style="font-family: 'Noto Sans JP', sans-serif;">Login</button>
-
-    </mat-card>
-
-</div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <!-- Start head tag -->
@@ -115,11 +83,6 @@
             color: #333;
             font-weight: 600;
         }
-        
-        .label {
-            color: #476176;
-            font-family: "Noto Sans JP", sans-serif;
-        }
     </style>
 </head>
 <!-- End head tag -->
@@ -127,7 +90,7 @@
 
 <body>
     <!-- Start login bar -->
-    <div class="navbar navbar-default navbar-fixed-top" style="background-color: #fff;">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <a href="https://neetkorner.com/" class="navbar-brand">
@@ -147,11 +110,11 @@
                     </div>
                     <ul class="nav navbar-nav mob-search-view">
                         <li>
-                            <label class="label">User Id</label>
+                            <label>User Id</label>
                             <input type="text" class="form-control" name="email" placeholder="Enter your user id" required>
                         </li>
                         <li>
-                            <label class="label">Password</label>
+                            <label>Password</label>
                             <input type="password" class="form-control" name="password" placeholder="Enter Password" required>
                         </li>
                         <li>
@@ -165,7 +128,7 @@
     <!-- End login bar -->
 
     <!-- Start menu -->
-    <div class="container-fluid gray-bg" style="margin-top:0px;">
+    <div class="container-fluid gray-bg" style="margin-top:65px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -186,6 +149,7 @@
         <div class="row">
             <div class="banner">
                 <img src="https://www.mylearninggraph.com/assets/instituteimages/banners/logo_1606214825_banner-img.jpg" class="img-responsive" alt="" title="">
+                <!-- <img src="images/banner.jpg" class="img-responsive" alt="" title=""> -->
             </div>
         </div>
     </div>
