--- a/src/app/courses/courses-page/courses-page.component.html
+++ b/src/app/courses/courses-page/courses-page.component.html
@@ -1,4 +1,4 @@
-<div class="ws-section">
+<div class="ws-section" id="top">
     <div class="login-wrapper" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutAlign="space-around">
         <div class="left-part" fxFlex="40" fxLayout="column" fxLayoutAlign="start start">
             <div class="img_box">
@@ -15,7 +15,7 @@
                     <div class="column1">
                         <div class="ws-style">
                             <div id="head">Subject</div>
-                            <div id="desc">Chemistry</div>
+                            <div id="desc">{{courseDetails.subject}}</div>
                         </div>
                         <div class="ws-ageGroup">
                             <div id="head">Language</div>
